:sparkles: logout cas handler
